Fix buttons overlapping

--- a/format-standardify/src/app/converter/converter.component.css
+++ b/format-standardify/src/app/converter/converter.component.css
@@ -9,7 +9,7 @@ header{
     top:0;
     padding: 1rem;
     box-sizing: border-box;
-
+    z-index: 1;
 }
 
 .main-logo{
